--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -15,18 +15,28 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
           node-version: '18.x'
-
+          
+      - name: Install sudo
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y sudo
+          
       - name: npm install, build, and test
         run: |
-          npm install
+          npm install --force
           npm run build --if-present
           npm run test --if-present
-
+      - name: Install next-auth
+        run: npm install next-auth@latest --force
+      
+      - name: Zip artifact for deployment
+        run: zip -r release.zip . -i ./build/*
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
