--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -27,10 +27,10 @@ jobs:
           sudo apt-get install -y sudo
           
       - name: npm install, build, and test
-        run: |
-          npm install --force
-          npm run build --if-present
-          npm run test --if-present
+        run: | 
+          npm install -g pnpm
+          pnpm install
+          pnpm run build
       
       - name: Zip artifact for deployment
         run: zip -r release.zip . -i ./build/*
