--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -29,7 +29,7 @@ jobs:
       - name: npm install, build, and test
         run: | 
           npm install -g pnpm
-          pnpm install
+          pnpm install --no-frozen-lockfile
           pnpm run build
       
       - name: Zip artifact for deployment
