--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -33,7 +33,7 @@ jobs:
           pnpm run build
       
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -i ./build/*
+        run: zip release.zip ./build/* -r
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
