--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "next": "13.4.19",
     "next-auth": "0.0.0-manual.ffd05533",
     "next-themes": "^0.2.1",
-    "nodejs": "0.0.0",
+    "nodejs": "^18.17.1",
     "openai-edge": "^0.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
