--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "format:write": "prettier --write \"{app,lib,components}/**/*.{ts,tsx,mdx}\" --cache",
     "format:check": "prettier --check \"{app,lib,components}**/*.{ts,tsx,mdx}\" --cache"
   },
+  "engines": {
+    "node": ">=16"
+  },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -35,7 +38,6 @@
     "next": "13.4.19",
     "next-auth": "0.0.0-manual.ffd05533",
     "next-themes": "^0.2.1",
-    "nodejs": "^18.17.1",
     "openai-edge": "^0.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
