--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "format:check": "prettier --check \"{app,lib,components}**/*.{ts,tsx,mdx}\" --cache"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "18.17.1"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.4",
@@ -71,7 +71,7 @@
     "tailwindcss-animate": "^1.0.5",
     "typescript": "^4.5.5"
   },
-  "packageManager": "pnpm@6.0.3",
+  "packageManager": "pnpm@8.6.3",
   "pnpm": {
     "overrides": {
       "@auth/core": "0.12.0"
