--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -62,3 +62,32 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_04003FDCA94B4BE3928B4850814F6E61 }}
           package: .
+
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Cache pnpm
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.pnpm_config_cache }}
+          key: pnpm-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
+          displayName: Cache pnpm
+
+      - name: Cache .next/cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/.next/cache
+          key: next-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
+          displayName: "Cache .next/cache"
+
+      - name: Setup pnpm
+        run: |
+          curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm@7
+          pnpm config set store-dir ${{ env.pnpm_config_cache }}
+          displayName: "Setup pnpm"
+
+      - name: Install and build
+        run: |
+          pnpm install
+          pnpm run build
+          displayName: "pnpm install and build"
