--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -15,7 +15,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    
+      - id: Cache@2
+        with:
+          key: 'pnpm | "$(Agent.OS)" | pnpm-lock.yaml'
+          path: $(pnpm_config_cache)
+        name: Cache pnpm
+
+
       - uses: actions/checkout@v2
           
       - name: Set up Node.js version
