--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -15,6 +15,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
+          
+      - name: Set up Node.js version
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
+              
+      - name: Install sudo
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y sudo
+          
+      - name: npm install, build, and test
+        run: | 
+          npm install -g pnpm
+          pnpm install --no-frozen-lockfile
+          pnpm run build
+      
+      - name: Zip artifact for deployment
+        run: zip -r release.zip . -i ./build/*
+      
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v2
+        with:
+          name: node-app
+          path: ./release.zip
+
       - name: Checkout code
         uses: actions/checkout@v2
       
@@ -41,34 +68,6 @@ jobs:
           pnpm run build
 
       - name: Archive files
-        run: zip -r release.zip . -i ./build/*
-      
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
-        with:
-          name: node-app
-          path: ./release.zip
-
-
-      - uses: actions/checkout@v2
-          
-      - name: Set up Node.js version
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16.x'
-              
-      - name: Install sudo
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y sudo
-          
-      - name: npm install, build, and test
-        run: | 
-          npm install -g pnpm
-          npm run postinstall
-          pnpm run build
-      
-      - name: Zip artifact for deployment
         run: zip -r release.zip . -i ./build/*
       
       - name: Upload artifact for deployment job
