--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ai-ga-frontend-azure",
   "version": "0.0.2",
   "private": true,
-  "main": "app.js",
+  "main": "layout.tsx",
   "engines": {
     "node": "18.16.1"
   },
