--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -8,38 +8,68 @@ on:
     branches:
       - azuredeployment
   workflow_dispatch:
-
+  
+          
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
+      - uses: actions/checkout@v2
+          
+      - name: Set up Node.js version
+        uses: actions/setup-node@v2
         with:
-          version: 7
-          run_install: false
-
-      - name: Get pnpm store directory
-        shell: bash
+          node-version: '18.x'
+              
+      - name: Install sudo
         run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
+          sudo apt-get update
+          sudo apt-get install -y sudo
+          
+      - name: npm install, build, and test
+        run: | 
+          npm install -g pnpm
+          pnpm install --no-frozen-lockfile
+          pnpm run build
+      
+      - name: Zip artifact for deployment
+        run: zip -r release.zip . -i ./build/*
+      
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v2
         with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          name: node-app
+          path: ./release.zip
 
-      - name: Install dependencies
-        run: pnpm install
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Cache pnpm
+        uses: actions/cache@v2
+        with:
+          key: 'pnpm | "${{ runner.os }}" | pnpm-lock.yaml'
+          path: ${{ runner.workspace }}/.pnpm-store
+
+      - name: Cache .next/cache
+        uses: actions/cache@v2
+        with:
+          key: next | ${{ runner.os }} | pnpm-lock.yaml
+          path: ${{ github.workspace }}/.next/cache
+
+      - name: Setup pnpm
+        run: |
+          curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm@7
+          pnpm config set store-dir ${{ runner.workspace }}/.pnpm-store
+
+      - name: Install and build
+        run: |
+          pnpm install --no-frozen-lockfile
+          pnpm run build
 
       - name: Archive files
         run: zip -r release.zip . -i ./build/*
-
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
@@ -58,7 +88,6 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
-
       - name: 'Install pnpm in Azure'
         run: |
           echo "Installing pnpm..."
