--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -21,29 +21,19 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '18.x'
-              
-      - name: Install sudo
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y sudo
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2.2.1
+        with:
+          version: "8.x"
           
-      - name: npm install, build, and test
+      - name: pnpm install, and build
         run: | 
-          npm install -g pnpm
           pnpm install --no-frozen-lockfile
           pnpm run build
       
       - name: Zip artifact for deployment
         run: zip -r release.zip . -i ./build/*
-      
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
-        with:
-          name: node-app
-          path: ./release.zip
-
-      - name: Checkout code
-        uses: actions/checkout@v2
       
       - name: Cache pnpm
         uses: actions/cache@v2
@@ -56,19 +46,6 @@ jobs:
         with:
           key: next | ${{ runner.os }} | pnpm-lock.yaml
           path: ${{ github.workspace }}/.next/cache
-
-      - name: Setup pnpm
-        run: |
-          curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm@7
-          pnpm config set store-dir ${{ runner.workspace }}/.pnpm-store
-
-      - name: Install and build
-        run: |
-          pnpm install --no-frozen-lockfile
-          pnpm run build
-
-      - name: Archive files
-        run: zip -r release.zip . -i ./build/*
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
