--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -32,6 +32,14 @@ jobs:
           pnpm install --no-frozen-lockfile
           pnpm run build
       
+      - name: Cache pnpm store
+        uses: actions/cache@v2
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
+      
       - name: Zip artifact for deployment
         run: zip -r release.zip . -i ./build/*
       
@@ -56,6 +64,11 @@ jobs:
       uses: pnpm/action-setup@v2.2.1
       with:
         version: "8.x"
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '18.x'
+        registry-url: 'https://registry.npmjs.org/'
+    
     - uses: actions/setup-node@v3
       with:
         node-version: '18.x'
