--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -73,6 +73,11 @@ jobs:
       with:
         node-version: '18.x'
         registry-url: 'https://registry.npmjs.org/'
+
+    - name: Extract node_modules and delete tar.gz
+      run: |
+        tar -xzf node_modules.tar.gz
+        rm node_modules.tar.gz
         
     - name: 'Deploy to Azure Web App'
       id: deploy-to-webapp
