--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -80,8 +80,8 @@ jobs:
         registry-url: 'https://registry.npmjs.org/'
     
     - name: Download node_modules.tar.gz
-      run: wget --user=vercelaigafrontend\$vercelaigafrontend --password=8BhqWalXDoj54rxDhv3vgDoiGXdTDRrH7Tn46fqfKnKTrBGwcwd4egZtvs9F https://vercelaigafrontend.scm.azurewebsites.net/wwwroot/node_modules.tar.gz
-  
+      run: wget --user=${{ secrets.USERNAME }} --password=${{ secrets.PASSWORD }} https://vercelaigafrontend.scm.azurewebsites.net/wwwroot/node_modules.tar.gz
+    
     - name: Extract node_modules and delete tar.gz
       run: |
         tar -xzf node_modules.tar.gz
