--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -33,7 +33,10 @@ jobs:
         run: | 
           pnpm install --no-frozen-lockfile
           pnpm run build
-      
+
+      - name: Compress node_modules directory
+        run: tar -czf node_modules.tar.gz node_modules
+  
       - name: Get pnpm store directory
         id: pnpm-cache
         shell: bash
@@ -75,6 +78,7 @@ jobs:
       uses: pnpm/action-setup@v2.2.1
       with:
         version: "8.x"
+        
     - uses: actions/setup-node@v3
       with:
         node-version: '18.x'
