--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - vercelaigafrontend
 
 on:
@@ -8,8 +5,12 @@ on:
     branches:
       - azuredeployment
   workflow_dispatch:
-  
-          
+
+env:
+  AZURE_WEBAPP_NAME: 'vercelaigafrontend'   # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: '18.x'                # set this to the node version to use
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,48 +20,28 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2.2.1
-        with:
-          version: "8.x"
-
-      - name: Set up Node.js version
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18.x'
-        
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'pnpm'
+
       - name: pnpm install, and build
         run: | 
           pnpm install --no-frozen-lockfile
           pnpm run build
-  
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path | tr -d '\n')" >> $GITHUB_OUTPUT
-          
-      - name: Cache pnpm store
-        uses: actions/cache@v2
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-
-      
+
       - name: Zip artifact for deployment
         run: zip -r release.zip . -i ./build/*
-      
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
           path: ./release.zip
 
-
   deploy:
     runs-on: ubuntu-latest
-    
     needs: build
     environment:
       name: 'Production'
@@ -70,28 +51,16 @@ jobs:
       contents: write
       packages: write
     steps:
-    - uses: actions/checkout@v3
-    - name: Install pnpm
-      uses: pnpm/action-setup@v2.2.1
-      with:
-        version: "8.x"
-        
-    - uses: actions/setup-node@v3
-      with:
-        node-version: '18.x'
-        registry-url: 'https://registry.npmjs.org/'
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v2
+        with:
+          name: node-app
 
-    - name: Extract node_modules and delete tar.gz
-      working-directory: ${{ github.workspace }}
-      run: |
-        tar -xzf node_modules.tar.gz
-        rm node_modules.tar.gz
-        
-    - name: 'Deploy to Azure Web App'
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'vercelaigafrontend'
-        slot-name: 'Production'
-        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_04003FDCA94B4BE3928B4850814F6E61 }}
-        package: .
+      - name: 'Deploy to Azure WebApp'
+        id: deploy-to-webapp 
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_04003FDCA94B4BE3928B4850814F6E61 }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
