--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -50,15 +50,13 @@ jobs:
           pnpm run build
       
       - name: Zip artifact for deployment
-        run: |
-          cd build
-          zip -r ../release.zip .
+        run: cd build && zip -r ../release.zip .
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ./release.zip
 
 
   deploy:
