--- a/.github/workflows/vercel-frontend-azure-v02_vercel-aigafrontend-azure-v02.yml
+++ b/.github/workflows/vercel-frontend-azure-v02_vercel-aigafrontend-azure-v02.yml
@@ -1,56 +1,100 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - vercel-aigafrontend-azure-v02
+name: Build and deploy Node.js app to Azure Web App - vercelaigafrontend
 
 on:
   push:
     branches:
-      - vercel-frontend-azure-v02
+      - azuredeployment
   workflow_dispatch:
-
+  
+          
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+      packages: write
     steps:
-      - uses: actions/checkout@v2
+
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - uses: pnpm/action-setup@0609f0983b7a228f052f81ef4c3d6510cae254ad
+        with:
+          version: 8
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: '18'
+          cache: 'pnpm'
 
-      - name: npm install, build, and test
+      - name: Get pnpm store directory
+        shell: bash
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+        
+      - name: pnpm install, and build
+        run: | 
+          pnpm install --no-frozen-lockfile
+          pnpm run build
+
+      - name: List directory contents
+        run: |
+          ls -R
+          mkdir dist
+      
+      - name: Archive Release
+        uses: thedoctor0/zip-release@v0.3.0
+        with:
+          filename: 'dist.zip'
+          path: 'dist/'
+      - run: mv dist.zip dist/
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: 'dist/'
+
 
   deploy:
     runs-on: ubuntu-latest
+    
     needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
+    permissions:
+      contents: write
+      packages: write
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: node-app
+      - name: Display structure of downloaded files
+        run: ls -R
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+      - name: 'Echo download path'
+        run: echo ${{steps.download.outputs.download-path}}
+
+      - name: 'Deploy to Azure WebApp'
+        id: deploy-to-webapp 
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'vercel-aigafrontend-azure-v02'
+          app-name: 'vercelaigafrontend'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C86304C217124DF09C405822A2D7E0AC }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_04003FDCA94B4BE3928B4850814F6E61 }}
           package: .
