--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -50,13 +50,13 @@ jobs:
           pnpm run build
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./build/* -r
+        run: zip -r release.zip . -i ./build/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: release.zip
+          path: ./release.zip
 
 
   deploy:
