--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -8,57 +8,87 @@ on:
     branches:
       - azuredeployment
   workflow_dispatch:
-
+  
+          
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+      packages: write
     steps:
-      - uses: actions/checkout@v2
+
+      - name: Checkout
+        uses: actions/checkout@v4
       
-      - name: Set up Node.js version
-        uses: actions/setup-node@v1
+      - uses: pnpm/action-setup@0609f0983b7a228f052f81ef4c3d6510cae254ad
         with:
-          node-version: '18.x'
-          
-      - name: Install sudo
+          version: 8
+
+      - name: Set up Node.js version
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'pnpm'
+
+      - name: Get pnpm store directory
+        shell: bash
         run: |
-          sudo apt-get update
-          sudo apt-get install -y sudo
-          
-      - name: npm install, build, and test
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+        
+      - name: pnpm install, and build
+        run: | 
+          pnpm install --no-frozen-lockfile
+          pnpm run build
+
+      - name: Prepare deployment package
         run: |
-          npm install --force
-          npm run build --if-present
-          npm run test --if-present
-      
-      - name: Zip artifact for deployment
-        run: zip -r release.zip . -i ./build/*
-      
+          mkdir deploy
+          cp -r node_modules package.json .next deploy/
+          cd deploy
+          zip -r my-nextjs-app.zip *
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ./deploy/my-nextjs-app.zip
 
   deploy:
     runs-on: ubuntu-latest
+    
     needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
+    permissions:
+      contents: write
+      packages: write
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: node-app
+      - name: Display structure of downloaded files
+        run: ls -R
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+      - name: 'Echo download path'
+        run: echo ${{steps.download.outputs.download-path}}
+
+      - name: 'Deploy to Azure WebApp'
+        id: deploy-to-webapp 
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'vercelaigafrontend'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_04003FDCA94B4BE3928B4850814F6E61 }}
-          package: .
+          package: my-nextjs-app.zip
