Adding some more files to zip

--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -52,6 +52,8 @@ jobs:
       - name: Prepare deployment package
         run: |
           mkdir deploy
+          cp -r public standalone/
+          cp -r .next/static .next/standalone/.next
           cp -r .next/standalone package.json deploy/
           cd deploy
           zip -r my-nextjs-app.zip *
