--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -53,13 +53,13 @@ jobs:
       - name: Prepare deployment package
         run: |
           mkdir deploy
-          cp -r .next package.json node_modules deploy/
+          cp -r .next/standalone pnpm-lock.yaml deploy/
           cd deploy
           ls -la
           zip -r my-nextjs-app.zip *
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: node-app
           path: ./deploy/my-nextjs-app.zip
