--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start:azure": "node server.js",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
