--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Prepare deployment package
         run: |
           mkdir deploy
-          cp -r .next/standalone pnpm-lock.yaml deploy/
+          cp -r .next/standalone/* pnpm-lock.yaml deploy/
           cd deploy
           ls -la
           zip -r my-nextjs-app.zip *
