Deleting zip before deploying

--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -99,6 +99,7 @@ jobs:
       - name: unzip artifact for deployment
         run: |
           unzip release.zip
+          rm -rf release.zip
           pwd
           ls -l
 
