--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           echo "Listing all files from .next/standalone to create zip:"
           ls -la .next/standalone/
-          zip -r release.zip .next/standalone/ pnpm-lock.yaml
+          zip -r release.zip .next/standalone/* pnpm-lock.yaml
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3.1.3
